Update before class

--- a/HTML & CSS/Position Assignment/index.html
+++ b/HTML & CSS/Position Assignment/index.html
@@ -14,7 +14,7 @@
           <li>Guides</li>
           <li>Materials</li>
         </ul>
-        <h1>Group Assignments</h1>
+        <h1>Group Assignments!</h1>
       </div>
     </header>
     <div id="body">
