--- a/jQuery/Adding a User/index.html
+++ b/jQuery/Adding a User/index.html
@@ -30,11 +30,11 @@
         <label for="fName">First Name</label>
         <input type="text" placeholder="First Name" id="fName" name="first_name" required />
         <label for="lName">Last Name</label>
-        <input type="text" placeholder="Last Name" id="lName" name="first_name" required />
+        <input type="text" placeholder="Last Name" id="lName" name="last_name" required />
         <label for="email">Email Address</label>
-        <input type="text" placeholder="Email Address" id="email" name="first_name" required />
+        <input type="text" placeholder="Email Address" id="email" name="email_add" required />
         <label for="phone">Contact #</label>
-        <input type="text" placeholder="Contact #" id="phone" name="first_name" required />
+        <input type="text" placeholder="Contact #" id="phone" name="contact_number" required />
         <br />
         <input type="submit" id="addUser" />
         <input type="reset" id="reset" />
